// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarLeft component should render highlighted 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StarLeft
    isHighlighted={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Polygon
          fill="#FBCF27"
          points="42.1,0.4 33.4,32.3 0.4,33.6 28,51.8 19.1,83.6 44.9,63 72.3,81.2 60.7,50.3 86.6,29.9 53.6,31.4  "
        />,
        <Polygon
          fill="#E59E00"
          points="86.6,29.9 57.1,48.2 72.3,81.2 60.7,50.3    "
        />,
        <Polygon
          fill="#E59E00"
          points="0.4,33.6 31.3,49.3 19.1,83.6 28,51.8   "
        />,
      ],
      "height": "42",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 87 84",
      "width": "43.5",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#FBCF27",
          "points": "42.1,0.4 33.4,32.3 0.4,33.6 28,51.8 19.1,83.6 44.9,63 72.3,81.2 60.7,50.3 86.6,29.9 53.6,31.4  ",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#E59E00",
          "points": "86.6,29.9 57.1,48.2 72.3,81.2 60.7,50.3    ",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#E59E00",
          "points": "0.4,33.6 31.3,49.3 19.1,83.6 28,51.8   ",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Polygon
            fill="#FBCF27"
            points="42.1,0.4 33.4,32.3 0.4,33.6 28,51.8 19.1,83.6 44.9,63 72.3,81.2 60.7,50.3 86.6,29.9 53.6,31.4  "
          />,
          <Polygon
            fill="#E59E00"
            points="86.6,29.9 57.1,48.2 72.3,81.2 60.7,50.3    "
          />,
          <Polygon
            fill="#E59E00"
            points="0.4,33.6 31.3,49.3 19.1,83.6 28,51.8   "
          />,
        ],
        "height": "42",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 87 84",
        "width": "43.5",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#FBCF27",
            "points": "42.1,0.4 33.4,32.3 0.4,33.6 28,51.8 19.1,83.6 44.9,63 72.3,81.2 60.7,50.3 86.6,29.9 53.6,31.4  ",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#E59E00",
            "points": "86.6,29.9 57.1,48.2 72.3,81.2 60.7,50.3    ",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#E59E00",
            "points": "0.4,33.6 31.3,49.3 19.1,83.6 28,51.8   ",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`StarLeft component should render not highlighted 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <StarLeft
    isHighlighted={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Polygon
          fill="#E2E2E2"
          points="42.1,0.4 33.4,32.3 0.4,33.6 28,51.8 19.1,83.6 44.9,63 72.3,81.2 60.7,50.3 86.6,29.9 53.6,31.4  "
        />,
        <Polygon
          fill="#C4C4C4"
          points="86.6,29.9 57.1,48.2 72.3,81.2 60.7,50.3    "
        />,
        <Polygon
          fill="#C4C4C4"
          points="0.4,33.6 31.3,49.3 19.1,83.6 28,51.8   "
        />,
      ],
      "height": "42",
      "preserveAspectRatio": "xMidYMid meet",
      "viewBox": "0 0 87 84",
      "width": "43.5",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#E2E2E2",
          "points": "42.1,0.4 33.4,32.3 0.4,33.6 28,51.8 19.1,83.6 44.9,63 72.3,81.2 60.7,50.3 86.6,29.9 53.6,31.4  ",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#C4C4C4",
          "points": "86.6,29.9 57.1,48.2 72.3,81.2 60.7,50.3    ",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#C4C4C4",
          "points": "0.4,33.6 31.3,49.3 19.1,83.6 28,51.8   ",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Polygon
            fill="#E2E2E2"
            points="42.1,0.4 33.4,32.3 0.4,33.6 28,51.8 19.1,83.6 44.9,63 72.3,81.2 60.7,50.3 86.6,29.9 53.6,31.4  "
          />,
          <Polygon
            fill="#C4C4C4"
            points="86.6,29.9 57.1,48.2 72.3,81.2 60.7,50.3    "
          />,
          <Polygon
            fill="#C4C4C4"
            points="0.4,33.6 31.3,49.3 19.1,83.6 28,51.8   "
          />,
        ],
        "height": "42",
        "preserveAspectRatio": "xMidYMid meet",
        "viewBox": "0 0 87 84",
        "width": "43.5",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#E2E2E2",
            "points": "42.1,0.4 33.4,32.3 0.4,33.6 28,51.8 19.1,83.6 44.9,63 72.3,81.2 60.7,50.3 86.6,29.9 53.6,31.4  ",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#C4C4C4",
            "points": "86.6,29.9 57.1,48.2 72.3,81.2 60.7,50.3    ",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#C4C4C4",
            "points": "0.4,33.6 31.3,49.3 19.1,83.6 28,51.8   ",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
